--- a/DS_audio_1-001-024.html
+++ b/DS_audio_1-001-024.html
@@ -3,33 +3,39 @@
 
 Kapitel 1 Wir begrüßen uns
 Marker_001
-beide:
 Hallo!
 Hallo!
 Guten Tag!
 Halli-Hallo
 Hallöchen
+
 Marker_002
 Wir begrüßen uns ausführlich
 Wir wollen uns alle ausführlich begrüßen
 Und weiter begrüßen
 und immer noch mehr begrüßen und länger und ausführlicher
+
 Marker_003
-T: Ich kann von Begrüßungen überhaupt nicht genug kriegen
+Ich kann von Begrüßungen überhaupt nicht genug kriegen
+
 Marker_004
-H: Ich kann von Begrüßungen überhaupt nicht genug kriegen
+Ich kann von Begrüßungen überhaupt nicht genug kriegen
+
 Marker_005
-T: Sie hören jetzt immer noch:
+Sie hören jetzt immer noch:
+
 Marker_006
-beide: Hallo!
+Hallo!
 Wie geht‘s?
+
 Marker_007
 Wir gehen gleich los.
 Es geht gleich los, ja.
 Gleich werden Sie alles sehen.
 [kleinere Pause]
+
 Marker_008
-T: Gucken Sie mal, dort!
+Gucken Sie mal, dort!
 Und gucken Sie mal dahin; sehen Sie das?
 Oh, jetzt ist es schon weg.
 Aber kurz war es da.
@@ -39,57 +45,68 @@ Kurz war es da, und gefiel mir so sehr.
 Ich erinnere mich daran, dass es mir sehr gut gefiel.
 Aber ich weiß nicht, was es wahr.
 Und ich werde es für immer vermissen.
+
 Marker_009
-Beide: Es geht doch gleich los.
+Es geht doch gleich los.
 Jaja
 jaja
 Auf jeden Fall.
 [kleinere Pause]
+
 Marker_010
-H: Es waren einmal sehr beherzte Schritte.
+Es waren einmal sehr beherzte Schritte.
 Oh ja, es waren wirklich einmal sehr beherzte Schritte.
 Hat jemand von beherzten Schritten gehört?
 Die Zeit der beherzten Schritte ist vorbei.
 Die Kulturtechnik des beherzten Setzens eines Fußes vor den anderen ist ausgestorben.
+
 Marker_011
-Beide: Das stimmt alles nicht.
+Das stimmt alles nicht.
 Das ist aber gar nicht wahr.
+
 Marker_012
-T: Und überhaupt.
+Und überhaupt.
 Beherzte Schritte.
+
 Marker_013
-H: Sind Sie gut zu Fuß?
+Sind Sie gut zu Fuß?
 Sind Sie am Anfang?
 Sind Sie hier, wo es losgeht?
 Warten Sie schon länger?
 Kommen Sie nur näher!
 Sind Sie bereit?
+
 Marker_014
-Beide: Hallo!
+Hallo!
 Hallo!
 Guten Tag!
 Halli-Hallo
 Hallöchen
+
 Marker_015
-T: Sie hören seit Stunden Begrü.ungen.
+Sie hören seit Stunden Begrü.ungen.
 Sie hören lässig vorgebrachte Reden. Launige Reden.
 Reden, die jene, die die Reden halten nicht selbst geschrieben haben.
 Die hat ihnen jemand geschrieben.
 Die hat ihnen jemand auf den Tisch gelegt.
+
 Marker_016
-T: Huch, eine Rede!
+Huch, eine Rede!
 Da liegt ja eine Rede!
+
 Marker_017
 H: Liegt hier eine Rede?
+
 Marker_018
-Beide: Ist das Ihre Rede?
+Ist das Ihre Rede?
 Haben Sie eine Rede dabei?
 Sie können Ihre Rede gern hier ablegen.
 Sehen Sie, dort liegen schon viele Reden.
 Legen Sie Ihre einfach dazu.
 [kleinere Pause]
+
 Marker_019
-Beide: Herzlich willkommen
+Herzlich willkommen
 Guten Tag
 Guten Tag
 ich hoffe, es geht Dir / Euch / Ihnen gut
@@ -107,6 +124,7 @@ Welt
 Es tut uns folglich leid, dass es dir, euch, Ihnen nicht gut geht, gar nicht gut gehen kann, und
 es geht uns nicht anders.
 [kleinere Pause]
+
 Marker_020
 Wie geht es Ihnen?
 Können Sie noch?
@@ -116,6 +134,7 @@ Jahr.
 Sie entscheiden.
 Ja, Sie entscheiden.
 [kleinere Pause]
+
 Marker_021
 Herzlich willkommen, wir wünschten, es ginge Ihnen blendend, es könnte Ihnen blendend
 gehen.
@@ -124,16 +143,18 @@ ich hoffe, es geht Dir / Euch / Ihnen gut
 wir hoffen, es geht Dir / Euch / Ihnen bestens
 es sollte Dir / Euch / Ihnen überhaupt niemals anders gehen.
 [kleinere Pause]
+
 Marker_022
-T: Sie hören Begrüßungsworte, von allen, die es schaffen, auf die Bühne zu kommen.
+Sie hören Begrüßungsworte, von allen, die es schaffen, auf die Bühne zu kommen.
 Sie hören Begrüßungsworte, von allen, denen es einfällt, den Ort, an dem sie gerade stehen,
 eine Bühne zu nennen.
 Sie sprechen nun auch Begrüßungsworte.
 Sie sagen: „Beziehung hat viele Formen, sie steht auf dem Spiel, ist unfertig und hat
 Folgen.“(1)
 (1)1 S. 38 Donna Haraway Manifest für Gefährten
+
 Marker_023
-beide: Das haben Sie aber schön gesagt.
+Das haben Sie aber schön gesagt.
 Von Ihnen lassen wir uns gern begrüßen.
 Marker_024
 Hallo!
