--- a/DS_audio_2-025-085.html
+++ b/DS_audio_2-025-085.html
@@ -1,7 +1,8 @@
-25
+Marker_025
 Kapitel 2 Wir gehen los
-26
-beide: Wir sind allhier.
+
+Marker_026
+Wir sind allhier.
 Dann kann es ja losgehen.
 Wir gehen los.
 Wir gehen ja schon los.
@@ -11,32 +12,39 @@ und grundsätzlich
 und überhaupt
 seit Stunden, Tagen, Wochen, Monaten, Jahren, Jahrzehnten, Jahrhunderten unterwegs.
 Länger nicht.
-27
-T: Gut möglich, dass jetzt Zeit für eine Pause ist.
-28
-Beide: Es wäre schön, wenn wir zusammenbleiben könnten.
+
+Marker_027
+Gut möglich, dass jetzt Zeit für eine Pause ist.
+
+Marker_028
+Es wäre schön, wenn wir zusammenbleiben könnten.
 Es wäre schön, wenn Sie sich schon einmal selbständig umsehen.
 Natürlich kennen Sie sich hier sehr gut aus.
 Natürlich kennen Sie sich hier gar nicht aus.
 Schauen Sie bitte kurz nach oben und gleich darauf nach vorn.
-29
-H: Es war einmal ein Anfang, und weil er nicht gestorben ist, ist er immer noch.
+
+Marker_029
+Es war einmal ein Anfang, und weil er nicht gestorben ist, ist er immer noch.
 Es war einmal ein Anfang, der währte schon seit Ewigkeiten.
 Es war einmal ein Anfang, der währte schon seit sogenannten Ewigkeiten und währte und
 währte und währte.
-30
-Beide: Sehen Sie sich einmal diesen Anfang an.
-31
-H: Es war einmal jemand, der sagte unablässig: Ich bin allhier.
+
+Marker_030
+Sehen Sie sich einmal diesen Anfang an.
+
+Marker_031
+Es war einmal jemand, der sagte unablässig: Ich bin allhier.
 Und es war zudem einmal eine funktionierende Logistik.
 Es war schon einmal und noch einmal und noch einmal und noch einmal und noch einmal
 und immer so weiter eine funktionierende Logistik.
-32
-T: Ach, du meine Güte.
+
+Marker_032
+Ach, du meine Güte.
 Das will ich gar nicht hören.
 Das will ich gar nicht wissen.
-33
-Beide: Wenn Sie sich nun bitte einmal umsehen wollen.
+
+Marker_033
+Wenn Sie sich nun bitte einmal umsehen wollen.
 Sie sehen zum Beispiel
 einen zarten Bogen, ganz aus Stein und vom Wetter geformt.
 Sie sehen die Geschichte der ganzen Welt.
@@ -46,18 +54,21 @@ Sie sehen Landschaft und Sie hören Landschaft.
 Sie hören an dieser Stelle, da wir nun schon seit Jahrhunderten gehen und da wir gerade erst
 losgegangen sind, die Landschaft sagen, Sie hören wirklich nicht uns, sondern die
 Landschaft sagen:
-34
-T: Wenn Sie mich mal bitte nicht so ansehen würden!
+
+Marker_034
+Wenn Sie mich mal bitte nicht so ansehen würden!
 Mit Ihren vereinnahmenden, stolzen Blicken.
 Es gibt hier nichts zu sehen.
 Es gibt hier auf diese Art wirklich nichts zu sehen.
 Ich bin doch kein Ausstellungsstück. Ich bin doch kein Denkmal. Ich bin doch kein
 Ehrenhain.
 Was ist denn das für eine Blickkultur.
-35
-Beide: Sie hören die Landschaft also sagen:
-36
-T: Kann das mal aufhören
+
+Marker_035
+Sie hören die Landschaft also sagen:
+
+Marker_036
+Kann das mal aufhören
 ob das mal aufhören kann
 ich wäre gern ausschließlich als Landschaft zugegen
 und ich bin sowieso nur als Landschaft zugegen.
@@ -65,7 +76,8 @@ Das ist wirklich so.
 Und ich als Landschaft will nur sagen, ich will nun als Landschaft endlich einmal das
 Folgende sagen:
 Ich als Landschaft sage jetzt das Folgende:
-37
+
+Marker_037
 Wenn nun wieder jemand auf die Idee kommt, er sei irgendwo über irgendein Feld gerannt,
 mit straffer, aufrechter Körperhaltung einem Feind entschlossen entgegengerannt und
 zudem auch dem Licht der untergehenden Sonne und habe beim Rennen propagandistische
@@ -82,26 +94,31 @@ So wird das nie gewesen sein.
 Jetzt gucken Sie doch mal sich an und jetzt gucken Sie doch mal mich an.
 Gucken Sie, hier.
 Gucken Sie, dort.
-38
+
+Marker_038
 Wenn also wieder jemand auf die Idee kommt, sich an dergleichen zu erinnern und
 dergleichen zu vermissen und wiederbeleben zu wollen, dann können Sie mich, wenn Sie
 wollen, als widerständige, als mich widersetzende Landschaft denken.
-40
-T: Aber Sie können nicht auf die Widerständigkeit jeder Landschaft bauen.
-T: Grundsätzlich können Sie sich jedwede Landschaft als Landschaft denken.
-41
-Beide: Sie dürfen davon ausgehen, dass alles, was Sie sehen, so viel sagen könnte, wie diese
+
+Marker_040
+Aber Sie können nicht auf die Widerständigkeit jeder Landschaft bauen.
+Grundsätzlich können Sie sich jedwede Landschaft als Landschaft denken.
+
+Marker_041
+Sie dürfen davon ausgehen, dass alles, was Sie sehen, so viel sagen könnte, wie diese
 Landschaft.
 Wir haben alles, was gesagt werden kann, angehört und aufgenommen.
 Hören Sie:
 [PAUSE]
-42
+
+Marker_042
 Von dort drüben hören Sie noch besser.
 Wenn Sie mögen.
 Wir würden uns ja sehr freuen.
 [KLEINERE PAUSE]
-43
-Beide: Ach, ja
+
+Marker_043
+Ach, ja
 Herzlich Willkommen.
 Wer sind Sie eigentlich?
 Haben Sie Ihren Pass noch?
@@ -110,29 +127,35 @@ Wo sind Sie?
 Sind wir immer noch hier?
 Sind wir noch gar nicht losgegangen?
 Wie viel Zeit hast du / habt Ihr/ haben Sie mitgebracht?
-44
-H: Ich kann von Zeit überhaupt nicht genug kriegen.
-T: Hat jemand Zeit mitgebracht?
-H: Ich habe gehört, jemand hätte Zeit mitgebracht.
-45
-T: Übrigens war und ist hier niemand auf Fakten aus. Oder, besser gesagt, die Fakten sollen
+
+Marker_044
+Ich kann von Zeit überhaupt nicht genug kriegen.
+Hat jemand Zeit mitgebracht?
+Ich habe gehört, jemand hätte Zeit mitgebracht.
+
+Marker_045
+Übrigens war und ist hier niemand auf Fakten aus. Oder, besser gesagt, die Fakten sollen
 unsere Märchen sein und wir erzählen die Sache so:
-46
-H: Es war einmal ein Weg, und jemand setzte sich in Bewegung.
+
+Marker_046
+Es war einmal ein Weg, und jemand setzte sich in Bewegung.
 Es war einmal ein Weg, aber irgendwie stimmt das doch nicht.
 Oder wie ist es?
-47
-Beide: Wir sind ja auf die Märchen aus, denn wir suchen nach jener Fee, die uns die Zeit
+
+Marker_047
+Wir sind ja auf die Märchen aus, denn wir suchen nach jener Fee, die uns die Zeit
 anhält, weil es uns nicht gegeben ist, die Zeit anzuhalten.
 Weil uns der Mut ausgegangen ist, darüber nachzudenken, wie wir die Zeit anhalten
 könnten.
-48
+
+Marker_048
 Gehen wir zu schnell vor Ihnen her?
 Können Sie uns schon gar nicht mehr sehen, weil wir zu schnell sind?
 Wo sind Sie denn?
 Das geht ja gut los.
-49
-H: Wir rufen also jene Fee auf, die den Fluch nicht nehmen konnte, wohl aber den Fluch
+
+Marker_049
+Wir rufen also jene Fee auf, die den Fluch nicht nehmen konnte, wohl aber den Fluch
 verwandeln in einen hundertjährigen Schlaf und bitten sie um die Anwendung jener
 Technik, die, nach einem Vorfall ihrer Wahl, alle in einen hundertjährigen Schlaf fallen
 lässt, nur uns nicht, denn wir wollen vom hundertjährigen Schlaf selbst nicht betroffen sein,
@@ -141,29 +164,34 @@ unproduktiv, allenfalls milde oder die ihnen angemessenen Träume träumend.
 Wir sind also aus auf dieses Gefühl, nicht permanent Zeit zu verlieren, nicht sowieso schon
 alle Zeit verloren zu haben.
 [kleinere PAUSE]
-50
-Beide: Guten Tag, guten Tag.
+
+Marker_050
+Guten Tag, guten Tag.
 Das ist wirklich keine Reise.
 Das ist wirklich eine Reise.
-51
+
+Marker_051
 Das wird schon.
 Das wird schon.
 Das wird schon.
 [kleinere PAUSE]
-52
+
+Marker_052
 Herzlich willkommen zu dieser kleinen
 herzlich willkommen, wie soll ich sagen
 und was soll ich sagen
 Herzlich Willkommen
 [kleinere PAUSE]
-53
-T: Wir lesen: „Dieser Glaube an Wandern – zumindest Wandern auf dem Land – als etwas
+
+Marker_053
+Wir lesen: „Dieser Glaube an Wandern – zumindest Wandern auf dem Land – als etwas
 Tugendhaftes besteht fort. Beispiele dafür finden sich allerorten, Kürzlich stolperte ich über
 einen besonders ärgerlichen Essay in einer buddhistischen Zeitschrift, in dem es hieß, alle
-Probleme der Welt würden gelöst, wenn die politischen Führer nur wanderten.“ [ 2 ]
-[ 2 ] S. 151 Wanderlust. Eine Geschichte des Gehens. Rebecca Solnit. Matthes und Seitz 2019, 2. Auflage
-54
-beide: Wir wandern ja nicht.
+Probleme der Welt würden gelöst, wenn die politischen Führer nur wanderten.“ (2)
+(2) S. 151 Wanderlust. Eine Geschichte des Gehens. Rebecca Solnit. Matthes und Seitz 2019, 2. Auflage
+
+Marker_054
+Wir wandern ja nicht.
 Wir wandern höchstens aus Versehen.
 Wir flanieren auch nicht.
 Wir spazieren auch nicht.
@@ -184,85 +212,105 @@ stolpernd strauchelnd gehen
 dass wir sowieso auf der Seite der Stolperer und Strauchler sind und auf der Seite derer, die
 auf der Seite der Stolperer und Strauchler sind
 [kleinere PAUSE]
-55
+
+Marker_055
 also wie bitte
 ich meine
 wie wir hier so gehen
 das sieht /gar nicht/ gut aus
-56
+
+Marker_056
 Wie sieht es also aus?
 Es sieht ein bisschen nach Körperarbeit aus.
 Ja, Sie machen das schon ganz gut.
 Schön, dass Sie da sind.
 Schön, dass wir einander begleiten.
-57
+Marker_057
 Und wie ist die Aussicht?
-58
+
+Marker_058
 Die Aussicht könnte /nicht/ besser sein
 irgendwem ist immer der Blick in Richtung
 1.
 2.
 3.
 versperrt.
-59
+
+Marker_059
 Wir brauchen jetzt keinen unversperrten Blick.
 Wir brauchen jetzt einen unversperrten Blick.
 Und wir lesen alles.
 Wir lesen die sichtbaren und die unsichtbaren Inschriften.
 Schneller werden wir in diesem Leben nicht mehr werden.
 Wir sind ja nicht zum Spaß hier.
-60
-T: Und wir lesen, dass wir einander das Hinsehen schuldeten, wir dürften nicht wegsehen,
+
+Marker_060
+Und wir lesen, dass wir einander das Hinsehen schuldeten, wir dürften nicht wegsehen,
 nicht von den Nachrichten, nicht von den Abgründen der Anderen, wir müssen alles sehen
 wollen, denn sonst
 entziehen wir der Welt und den Anderen, den Nächsten und Fernsten, die Liebe.
-61
-Beide: Können Sie uns eigentlich sagen, wie wir zu den Abgründen kommen?
+
+Marker_061
+Können Sie uns eigentlich sagen, wie wir zu den Abgründen kommen?
 Können Sie uns sagen, wie wir zu den Abgründen kommen?
-62
-H: Was?
+
+Marker_062
+Was?
 Schon da?
-63
-T: Was?
+
+Marker_063
+Was?
 Schon zu?
-64
-Beide: Was es jetzt also zu sehen gibt:
+
+Marker_064
+Was es jetzt also zu sehen gibt:
 [kleinere PAUSE]
-65
+
+Marker_0
 Was es jetzt also nicht zu sehen gibt:
 [kleinere PAUSE]
-66
-beide: Wir kannten einmal alle Wege und fürchteten die wenigsten.
-67
+
+Marker_066
+Wir kannten einmal alle Wege und fürchteten die wenigsten.
+
+Marker_067
 Wir sind nie ausgezogen, das Fürchten zu lernen.
-68
+
+Marker_068
 Wie spät ist es?
-69
+
+Marker_069
 Wir sind schon sehr lange unterwegs.
-70
+
+Marker_070
 Wir setzen einen Fuß vor den anderen.
-71
+
+Marker_071
 Wir würden Ihnen später eventuell sagen, dass das unser Geheimnis bleiben muss.
-72
+
+Marker_072
 Wollen Sie sich setzen?
-73
-T: Es ist an dieser Stelle Zeit für ein paar Beispiele aus der Praxis:
-74
-H: Es waren einmal welche, die waren nur auf einen Spaziergang aus
+
+Marker_073
+Es ist an dieser Stelle Zeit für ein paar Beispiele aus der Praxis:
+
+Marker_074
+Es waren einmal welche, die waren nur auf einen Spaziergang aus
 aber dann
 Es waren einmal welche, die waren auf eine Wanderung aus
 aber dann
 Es waren einmal welche, die verließen ihre Wohnungen am Morgen,
 aber dann
 Es waren einmal welche, die gingen los und kehrten nie wieder zurück.
-75
-T: Und da wir schon dabei sind, ergänzen wir die Beispiele aus der Praxis
+
+Marker_075
+Und da wir schon dabei sind, ergänzen wir die Beispiele aus der Praxis
 um ein Spiel
 um eine Routine
 um einen Trick aus der Vorratskiste des internationalen Alltags.
 Es folgt eine Übung von Fortgeschrittenen erzählt für Anfänger und Anfängerinnen:
-76
-H:
+
+Marker_076
 Hallo!
 Wenn ich einmal einen Blick in deine Brieftasche werfen dürfte?
 Gut,
@@ -270,14 +318,14 @@ wir haben hier also einen Pass
 wir haben hier ein bisschen Geld
 und wir haben zwei Kreditkarten.
 Was von diesen drei Dingen, glaubst du, ist am wertvollsten?
-T: die Kreditkarten?
+die Kreditkarten?
 Nein, denn tatsächlich ist das der Pass: der wichtigste Besitz eines Menschen.
 Und genau hinter dem bin ich jetzt her.
 Darf ich?
-T: Okay.
+Okay.
 Du spielst jetzt den Menschen.
-T: Gut.
-H: Und ich bin eine Struktur und könnte jetzt versuchen, in dein Jacket zu greifen und die
+Gut.
+Und ich bin eine Struktur und könnte jetzt versuchen, in dein Jacket zu greifen und die
 Brieftasche rauszuholen. Aber wahrhaft meisterhaft wird es erst, wenn ich nicht die ganze
 Brieftasche, sondern nur den Inhalt der Brieftasche entwende.
 Also könnte ich jetzt zum Beispiel mit dir zusammenstoßen, das ist eine Möglichkeit.
@@ -289,7 +337,7 @@ Wenn ich deinem Blick trauen darf, bist du ein wenig überrascht und glaubst mi
 nicht.
 Vielen Dank!
 Hast du etwas bemerkt?
-T: Nein
+<br> Nein
 Vielen Dank!
 Und so mache ich weiter, und du bist immer noch der Mensch. Und ich bin immer noch die
 Struktur und habe es plötzlich eilig und sage:
@@ -303,44 +351,53 @@ Hast du etwas bemerkt?
 Wenn du es nicht gesehen hast, hast du es sicherlich auch nicht gespürt.
 Wenn du es nicht gespürt hast, hast du es sicherlich auch nicht gesehen.
 Sieh mal, was ich hier habe.
-T: Meine Brieftasche.
+<br> Meine Brieftasche.
 Vollkommen richtig.
 Siehst du dein Bargeld noch?
-T: Nein.
+<br> Nein.
 Siehst du deine Kreditkarten noch?
-T: Nein.
+<br> Nein.
 Und siehst du deinen Pass noch?
-T: Nein.
+<br> Nein.
 Wenn du von all diesen Dingen nichts mitbekommen hast, weißt du auch nicht, wo ich alles
 hingetan habe und wie du alles wiederbekommen könntest.
 Vielen Dank.
 Herzlichen Dank.
 Es war schön, mit Dir zu spielen.
-77
-Beide: Was ich dir also immer schon sagen wollte.
+
+Marker_077
+Was ich dir also immer schon sagen wollte.
 Was ich Ihnen schon immer sagen wollte
 was ich Euch schon immer sagen wollte.
-78
+
+Marker_078
 Haben Sie gut aufgepasst?
 Wissen Sie, wo Ihr Pass sich befindet?
 Alle Pässe fliegen hoch.
-79
-H: Ich muss los.
-80
-Beide: Wann sind wir endlich da?
+
+Marker_079
+Ich muss los.
+
+Marker_080
 Wann sind wir endlich da?
 Wann sind wir endlich da?
-81
+Wann sind wir endlich da?
+
+Marker_081
 Flüsternd: Wir sind voraussichtlich nie da!
 Und das wollen wir niemanden wissen lassen.
-82
-H: Ich kann leider nicht länger warten.
-83
+
+Marker_082
+Ich kann leider nicht länger warten.
+
+Marker_083
 Flüsternd: Wir sind voraussichtlich nie da, und das wollen wir alle wissen lassen.
 Wir sind voraussichtlich nie da, und das wollen wir alle wissen lassen.
-84
-Beide: Sie wissen das vermutlich längst.
+
+Marker_084
+Sie wissen das vermutlich längst.
 Aber das kann sie nicht mehr umwerfen.
 Diese Zeiten sind vorbei.
-85
-T: Sie hören nun das Lied von den Verbindungen, die nicht gekappt werden dürfen.
+
+Marker_085
+Sie hören nun das Lied von den Verbindungen, die nicht gekappt werden dürfen.
