--- a/DS_audio_4-142-165.html
+++ b/DS_audio_4-142-165.html
@@ -1,346 +1,163 @@
-25
-Kapitel 2 Wir gehen los
-26
-beide: Wir sind allhier.
-Dann kann es ja losgehen.
-Wir gehen los.
-Wir gehen ja schon los.
-Man kann es noch nicht sehen, aber wir gehen schon.
-Wir sind ja zudem sowieso schon
-und grundsätzlich
-und überhaupt
-seit Stunden, Tagen, Wochen, Monaten, Jahren, Jahrzehnten, Jahrhunderten unterwegs.
-Länger nicht.
-27
-T: Gut möglich, dass jetzt Zeit für eine Pause ist.
-28
-Beide: Es wäre schön, wenn wir zusammenbleiben könnten.
-Es wäre schön, wenn Sie sich schon einmal selbständig umsehen.
-Natürlich kennen Sie sich hier sehr gut aus.
-Natürlich kennen Sie sich hier gar nicht aus.
-Schauen Sie bitte kurz nach oben und gleich darauf nach vorn.
-29
-H: Es war einmal ein Anfang, und weil er nicht gestorben ist, ist er immer noch.
-Es war einmal ein Anfang, der währte schon seit Ewigkeiten.
-Es war einmal ein Anfang, der währte schon seit sogenannten Ewigkeiten und währte und
-währte und währte.
-30
-Beide: Sehen Sie sich einmal diesen Anfang an.
-31
-H: Es war einmal jemand, der sagte unablässig: Ich bin allhier.
-Und es war zudem einmal eine funktionierende Logistik.
-Es war schon einmal und noch einmal und noch einmal und noch einmal und noch einmal
-und immer so weiter eine funktionierende Logistik.
-32
-T: Ach, du meine Güte.
-Das will ich gar nicht hören.
-Das will ich gar nicht wissen.
-33
-Beide: Wenn Sie sich nun bitte einmal umsehen wollen.
-Sie sehen zum Beispiel
-einen zarten Bogen, ganz aus Stein und vom Wetter geformt.
-Sie sehen die Geschichte der ganzen Welt.
-Sie sehen ab sofort immer die Geschichte der ganzen Welt.
-Wenn Sie wollen.
-Sie sehen Landschaft und Sie hören Landschaft.
-Sie hören an dieser Stelle, da wir nun schon seit Jahrhunderten gehen und da wir gerade erst
-losgegangen sind, die Landschaft sagen, Sie hören wirklich nicht uns, sondern die
-Landschaft sagen:
-34
-T: Wenn Sie mich mal bitte nicht so ansehen würden!
-Mit Ihren vereinnahmenden, stolzen Blicken.
-Es gibt hier nichts zu sehen.
-Es gibt hier auf diese Art wirklich nichts zu sehen.
-Ich bin doch kein Ausstellungsstück. Ich bin doch kein Denkmal. Ich bin doch kein
-Ehrenhain.
-Was ist denn das für eine Blickkultur.
-35
-Beide: Sie hören die Landschaft also sagen:
-36
-T: Kann das mal aufhören
-ob das mal aufhören kann
-ich wäre gern ausschließlich als Landschaft zugegen
-und ich bin sowieso nur als Landschaft zugegen.
-Das ist wirklich so.
-Und ich als Landschaft will nur sagen, ich will nun als Landschaft endlich einmal das
-Folgende sagen:
-Ich als Landschaft sage jetzt das Folgende:
-37
-Wenn nun wieder jemand auf die Idee kommt, er sei irgendwo über irgendein Feld gerannt,
-mit straffer, aufrechter Körperhaltung einem Feind entschlossen entgegengerannt und
-zudem auch dem Licht der untergehenden Sonne und habe beim Rennen propagandistische
-Lieder gesungen und überhaupt den eigenen Tod in Kauf genommen, habe den eigenen Tod
-als schlüssige und naheliegende, als eine sich aus allem Stampfen über ein Feld, einem
-sogenannten Feind entgegen ergebende Folgerichtigkeit genommen – wenn also wieder
-jemand auf die Idee kommt, sich an dergleichen erinnern zu wollen, dann verweise ich auf
-meine feuchten Böden, auf meine Unebenheiten, auf meine Schlammkuhlen, verweise auf
-meine Hecken und Gräben und Disteln und Moore und Sümpfe und rufe, so gut ich es als
-Landschaft kann:
-Das glauben Sie doch selbst nicht.
-So war das doch nicht.
-So wird das nie gewesen sein.
-Jetzt gucken Sie doch mal sich an und jetzt gucken Sie doch mal mich an.
-Gucken Sie, hier.
-Gucken Sie, dort.
-38
-Wenn also wieder jemand auf die Idee kommt, sich an dergleichen zu erinnern und
-dergleichen zu vermissen und wiederbeleben zu wollen, dann können Sie mich, wenn Sie
-wollen, als widerständige, als mich widersetzende Landschaft denken.
-40
-T: Aber Sie können nicht auf die Widerständigkeit jeder Landschaft bauen.
-T: Grundsätzlich können Sie sich jedwede Landschaft als Landschaft denken.
-41
-Beide: Sie dürfen davon ausgehen, dass alles, was Sie sehen, so viel sagen könnte, wie diese
-Landschaft.
-Wir haben alles, was gesagt werden kann, angehört und aufgenommen.
-Hören Sie:
-[PAUSE]
-42
-Von dort drüben hören Sie noch besser.
-Wenn Sie mögen.
-Wir würden uns ja sehr freuen.
-[KLEINERE PAUSE]
-43
-Beide: Ach, ja
-Herzlich Willkommen.
-Wer sind Sie eigentlich?
-Haben Sie Ihren Pass noch?
-Haben Sie Ihren Pass dabei?
-Wo sind Sie?
-Sind wir immer noch hier?
-Sind wir noch gar nicht losgegangen?
-Wie viel Zeit hast du / habt Ihr/ haben Sie mitgebracht?
-44
-H: Ich kann von Zeit überhaupt nicht genug kriegen.
-T: Hat jemand Zeit mitgebracht?
-H: Ich habe gehört, jemand hätte Zeit mitgebracht.
-45
-T: Übrigens war und ist hier niemand auf Fakten aus. Oder, besser gesagt, die Fakten sollen
-unsere Märchen sein und wir erzählen die Sache so:
-46
-H: Es war einmal ein Weg, und jemand setzte sich in Bewegung.
-Es war einmal ein Weg, aber irgendwie stimmt das doch nicht.
-Oder wie ist es?
-47
-Beide: Wir sind ja auf die Märchen aus, denn wir suchen nach jener Fee, die uns die Zeit
-anhält, weil es uns nicht gegeben ist, die Zeit anzuhalten.
-Weil uns der Mut ausgegangen ist, darüber nachzudenken, wie wir die Zeit anhalten
-könnten.
-48
-Gehen wir zu schnell vor Ihnen her?
-Können Sie uns schon gar nicht mehr sehen, weil wir zu schnell sind?
-Wo sind Sie denn?
-Das geht ja gut los.
-49
-H: Wir rufen also jene Fee auf, die den Fluch nicht nehmen konnte, wohl aber den Fluch
-verwandeln in einen hundertjährigen Schlaf und bitten sie um die Anwendung jener
-Technik, die, nach einem Vorfall ihrer Wahl, alle in einen hundertjährigen Schlaf fallen
-lässt, nur uns nicht, denn wir wollen vom hundertjährigen Schlaf selbst nicht betroffen sein,
-aber viele andere von diesem Schlaf betroffen und somit wirklich schlafend wissen: inaktiv,
-unproduktiv, allenfalls milde oder die ihnen angemessenen Träume träumend.
-Wir sind also aus auf dieses Gefühl, nicht permanent Zeit zu verlieren, nicht sowieso schon
-alle Zeit verloren zu haben.
+Marker_142
+Kapitel 4 das Absagen
+
+Marker_143
+Sie bleiben hoffentlich noch ein bisschen.
+Es ist nicht mehr weit.
+Wenngleich das natürlich nicht stimmt.
+Mittlerweile wissen Sie das schon.
+Wir sind ja schon recht weit gekommen.
+Hier spielt die Musik, wenn ich das Mal so sagen darf.
+Ja, dort auch.
+Das stimmt.
+Sie haben Recht.
+
+Marker_144
+Und wenn wir dich/euch/Sie so sehen dann fragen wir uns schon: Wie leben wir
+eigentlich zusammen?
+
+Marker_145
+Und wenn du uns so siehst/ihr uns so seht/Sie uns so sehen, dann fragst du dich/fragt ihr
+euch/fragen Sie sich schon: Wie leben wir eigentlich zusammen?
+
+Marker_146
+Es war einmal eine Räterepublik
+Es war einmal ein Marsch durch alle Instanzen, ohne die Instanzen überhaupt zu touchieren
+und es war einmal eine andere Perspektive.
+
+Marker_147
+Aber damit hatten wir nichts zu tun.
+Hatten Sie etwas damit zu tun?
+Wir sind vielleicht, Sie sind vielleicht ganz durchlässige Subjekte.
+Wir lassen vielleicht, Sie lassen vielleicht, jedes Ereignis hier rein, da raus.
+Das kann schon sein.
+Aber hier ist es nicht so.
+Wo wir uns jetzt befinden, wo Sie sich jetzt befinden, ist es nicht so.
+
+Marker_148
+Und wir lesen:
+
+Marker_149
+„Das Verkennen war ebenso wichtig wie die flüchtigen Momente, in denen es gelang,
+etwas richtig zu machen.“ (3)
+(3) Haraway S. 43
+
+Marker_150
+Wir gehen weiter
+Wir gehen immer weiter
+Können Sie noch?
+Ja, Sie können noch.
+
+Marker_151
+Und wir lesen diesen Satz:
+
+Marker_152
+„Wer käme auf den Gedanken, dass sie gerade eine gigantische Panne hinter sich
+haben?“
+
+Marker_153
+Aha
+das ist eine schöne Überraschung.
+Das ist ein großer Spaß.
+Das ist ein Spaß.
+Wer käme auf solch einen Gedanken?
+Kämen Sie auf solch einen Gedanken?
+
+Marker_154
+Und würden wir nicht versuchen, uns das Erleiden einer Panne /nicht/anmerken zu lassen?
+Nicht wahr?
+Und würden Sie nicht versuchen, sich das Erleiden einer Panne /nicht/anmerken zu lassen?
+Nicht wahr?
+Erleiden wir gerade eine Panne?
+Erleiden Sie gerade eine Panne?
+[kleinere Pause]
+
+Marker_155
+Man macht einen Schritt und dann noch einen.
+wir wollen einen Fuß vor den anderen setzen
+aber übrigens keine Kausalitäten erzeugen
+oder Folgerichtigkeit.
+Aber was nun ein Schritt ist
+Oh Oh
+da scheiden sich die Geister
+da schon scheiden sich die Geister
+Ist das jetzt ein Schritt
+und ist das jetzt ein Schritt?
+
+Marker_156
+Es war und ist also Zeit für weitere Fragen.
+Und wir stehen nun, wie Sie sehen, inmitten von Architekturen, an deren Oberflächen die
+wie überflüssig wirkenden Fragen und Forderungen nicht abperlen.
+Und wir stehen nun inmitten von Architekturen, von deren Oberflächen die wie überflüssig
+wirkenden Fragen und Forderungen nicht aufgesogen werden, um dann für immer
+verschwunden zu sein.
+Wie ohne Beweis.
+Als hätte es sie nie gegeben.
+
+Marker_157
+Das ist ein Highlight.
+Möchten Sie ein Bild von sich?
+Wir können Sie gern vor diesen Architekturen fotografieren.
+
+Marker_158
+Wir sagen viel lieber Ja als Nein.
+Aber das muss leider unter uns bleiben.
+[kleinere Pause]
+
+Marker_159
+Es war übrigens mal einer, der verfasste immerzu Absagen
+der hatte sich wirklich auf Absagen spezialisiert
+und er war eine Koryphäe geworden
+meine Güte
+was für eine Koryphäe
+man war ganz verrückt nach seinen Absagen
+so dermaßen verrückt nach seinen Absagen
 [kleinere PAUSE]
-50
-Beide: Guten Tag, guten Tag.
-Das ist wirklich keine Reise.
-Das ist wirklich eine Reise.
-51
-Das wird schon.
-Das wird schon.
-Das wird schon.
+Haben Sie nicht auch eine seiner Absagen erhalten?
 [kleinere PAUSE]
-52
-Herzlich willkommen zu dieser kleinen
-herzlich willkommen, wie soll ich sagen
-und was soll ich sagen
-Herzlich Willkommen
+Die Absagen sind allesamt wirkungslos geworden.
+Wir haben ihm eines Tages eine Absage geschrieben.
+Wir müssen uns nun wirklich um eine neue Textsorte bemühen.
+Was können wir also schreiben, wenn Absagen unwirksam geworden sind, wenn niemand
+mehr auf Absagen hört?
+Diese Frage kam auf inmitten einer freundlichen Architektur.
 [kleinere PAUSE]
-53
-T: Wir lesen: „Dieser Glaube an Wandern – zumindest Wandern auf dem Land – als etwas
-Tugendhaftes besteht fort. Beispiele dafür finden sich allerorten, Kürzlich stolperte ich über
-einen besonders ärgerlichen Essay in einer buddhistischen Zeitschrift, in dem es hieß, alle
-Probleme der Welt würden gelöst, wenn die politischen Führer nur wanderten.“ [ 2 ]
-[ 2 ] S. 151 Wanderlust. Eine Geschichte des Gehens. Rebecca Solnit. Matthes und Seitz 2019, 2. Auflage
-54
-beide: Wir wandern ja nicht.
-Wir wandern höchstens aus Versehen.
-Wir flanieren auch nicht.
-Wir spazieren auch nicht.
-Wir berechnen unsere Schritte.
-Wir kommen gar nicht gut voran.
-Wir kommen gut voran.
-Wir berechnen nichts für unsere Schritte.
-Wir hinken vielleicht ein bisschen.
-Wir heben die Füße nicht
-also wir gehen ja, so wie wir gehen
-wenn jetzt mal alle schauen würden
-wie wir gehen
-wie wir nämlich nun eher stümperhaft gehen
-wie wir eher stolpernd und strauchelnd gehen
-dabei aber nicht von Misslingen sprechen
-und dass wir selbst dann, wenn wir nicht stolpernd, strauchelnd gehen, auf jeden Fall
-stolpernd strauchelnd gehen
-dass wir sowieso auf der Seite der Stolperer und Strauchler sind und auf der Seite derer, die
-auf der Seite der Stolperer und Strauchler sind
-[kleinere PAUSE]
-55
-also wie bitte
-ich meine
-wie wir hier so gehen
-das sieht /gar nicht/ gut aus
-56
-Wie sieht es also aus?
-Es sieht ein bisschen nach Körperarbeit aus.
-Ja, Sie machen das schon ganz gut.
-Schön, dass Sie da sind.
-Schön, dass wir einander begleiten.
-57
-Und wie ist die Aussicht?
-58
-Die Aussicht könnte /nicht/ besser sein
-irgendwem ist immer der Blick in Richtung
-1.
-2.
-3.
-versperrt.
-59
-Wir brauchen jetzt keinen unversperrten Blick.
-Wir brauchen jetzt einen unversperrten Blick.
-Und wir lesen alles.
-Wir lesen die sichtbaren und die unsichtbaren Inschriften.
-Schneller werden wir in diesem Leben nicht mehr werden.
-Wir sind ja nicht zum Spaß hier.
-60
-T: Und wir lesen, dass wir einander das Hinsehen schuldeten, wir dürften nicht wegsehen,
-nicht von den Nachrichten, nicht von den Abgründen der Anderen, wir müssen alles sehen
-wollen, denn sonst
-entziehen wir der Welt und den Anderen, den Nächsten und Fernsten, die Liebe.
-61
-Beide: Können Sie uns eigentlich sagen, wie wir zu den Abgründen kommen?
-Können Sie uns sagen, wie wir zu den Abgründen kommen?
-62
-H: Was?
-Schon da?
-63
-T: Was?
-Schon zu?
-64
-Beide: Was es jetzt also zu sehen gibt:
-[kleinere PAUSE]
-65
-Was es jetzt also nicht zu sehen gibt:
-[kleinere PAUSE]
-66
-beide: Wir kannten einmal alle Wege und fürchteten die wenigsten.
-67
-Wir sind nie ausgezogen, das Fürchten zu lernen.
-68
-Wie spät ist es?
-69
-Wir sind schon sehr lange unterwegs.
-70
-Wir setzen einen Fuß vor den anderen.
-71
-Wir würden Ihnen später eventuell sagen, dass das unser Geheimnis bleiben muss.
-72
-Wollen Sie sich setzen?
-73
-T: Es ist an dieser Stelle Zeit für ein paar Beispiele aus der Praxis:
-74
-H: Es waren einmal welche, die waren nur auf einen Spaziergang aus
-aber dann
-Es waren einmal welche, die waren auf eine Wanderung aus
-aber dann
-Es waren einmal welche, die verließen ihre Wohnungen am Morgen,
-aber dann
-Es waren einmal welche, die gingen los und kehrten nie wieder zurück.
-75
-T: Und da wir schon dabei sind, ergänzen wir die Beispiele aus der Praxis
-um ein Spiel
-um eine Routine
-um einen Trick aus der Vorratskiste des internationalen Alltags.
-Es folgt eine Übung von Fortgeschrittenen erzählt für Anfänger und Anfängerinnen:
-76
-H:
-Hallo!
-Wenn ich einmal einen Blick in deine Brieftasche werfen dürfte?
-Gut,
-wir haben hier also einen Pass
-wir haben hier ein bisschen Geld
-und wir haben zwei Kreditkarten.
-Was von diesen drei Dingen, glaubst du, ist am wertvollsten?
-T: die Kreditkarten?
-Nein, denn tatsächlich ist das der Pass: der wichtigste Besitz eines Menschen.
-Und genau hinter dem bin ich jetzt her.
-Darf ich?
-T: Okay.
-Du spielst jetzt den Menschen.
-T: Gut.
-H: Und ich bin eine Struktur und könnte jetzt versuchen, in dein Jacket zu greifen und die
-Brieftasche rauszuholen. Aber wahrhaft meisterhaft wird es erst, wenn ich nicht die ganze
-Brieftasche, sondern nur den Inhalt der Brieftasche entwende.
-Also könnte ich jetzt zum Beispiel mit dir zusammenstoßen, das ist eine Möglichkeit.
-Oder aber ich ich nähere mich eleganter und sage:
-Oh, schöne Jacke, schönes Material
-Bumm!
-Und so einfach geht das.
-Wenn ich deinem Blick trauen darf, bist du ein wenig überrascht und glaubst mir vielleicht
-nicht.
-Vielen Dank!
-Hast du etwas bemerkt?
-T: Nein
-Vielen Dank!
-Und so mache ich weiter, und du bist immer noch der Mensch. Und ich bin immer noch die
-Struktur und habe es plötzlich eilig und sage:
-Oh, wartet, ich bin gleich bei Euch!
-Und in der Eile stoße ich mit Dir zusammen und sage:
-Oh, entschuldigung
-Das tut mir leid.
-… und schon ist es erledigt!
-Hast du etwas bemerkt?
-- Nein
-Wenn du es nicht gesehen hast, hast du es sicherlich auch nicht gespürt.
-Wenn du es nicht gespürt hast, hast du es sicherlich auch nicht gesehen.
-Sieh mal, was ich hier habe.
-T: Meine Brieftasche.
-Vollkommen richtig.
-Siehst du dein Bargeld noch?
-T: Nein.
-Siehst du deine Kreditkarten noch?
-T: Nein.
-Und siehst du deinen Pass noch?
-T: Nein.
-Wenn du von all diesen Dingen nichts mitbekommen hast, weißt du auch nicht, wo ich alles
-hingetan habe und wie du alles wiederbekommen könntest.
-Vielen Dank.
-Herzlichen Dank.
-Es war schön, mit Dir zu spielen.
-77
-Beide: Was ich dir also immer schon sagen wollte.
-Was ich Ihnen schon immer sagen wollte
-was ich Euch schon immer sagen wollte.
-78
-Haben Sie gut aufgepasst?
-Wissen Sie, wo Ihr Pass sich befindet?
-Alle Pässe fliegen hoch.
-79
-H: Ich muss los.
-80
-Beide: Wann sind wir endlich da?
-Wann sind wir endlich da?
-Wann sind wir endlich da?
-81
-Flüsternd: Wir sind voraussichtlich nie da!
-Und das wollen wir niemanden wissen lassen.
-82
-H: Ich kann leider nicht länger warten.
-83
-Flüsternd: Wir sind voraussichtlich nie da, und das wollen wir alle wissen lassen.
-Wir sind voraussichtlich nie da, und das wollen wir alle wissen lassen.
-84
-Beide: Sie wissen das vermutlich längst.
-Aber das kann sie nicht mehr umwerfen.
-Diese Zeiten sind vorbei.
-85
-T: Sie hören nun das Lied von den Verbindungen, die nicht gekappt werden dürfen.
+
+Marker_160
+Wir stellen unsere Fragen vielleicht wahnsinnig unpräzise, wir stellen jede Frage
+vielleicht viel zu unpräzise oder doch absichtlich und nur vermeintlich unpräzise und
+möglicherweise schweiften wir beim Fragen über Gebühr ab.
+
+Marker_161
+Und wir fragten uns die ganze Zeit, wie es nun um die Verwendbarkeit der Wörter bestellt
+sei. Und wie um ihre Aussprechbarkeit.
+Und wir meinten nicht alle Wörter, sondern nur manche und sicherlich täglich mehr.
+Es war aber durchaus so, dass uns grundsätzlich nur die wenigsten Wörter Probleme beim
+Aussprechen bereiteten, unsere Zungen, der sogenannte Sprechapparat, war also intakt, es
+gab da nichts, was einen Logopäden länger als für einen Kontrollblick beschäftigt gehalten
+hätte.
+Aber wir konnten immer mehr Wörter nicht aussprechen, es ging und geht eben nicht, es
+geht nun wirklich nicht.
+
+Marker_162
+Es folgt die Liste der unaussprechbar gewordenen Wörter:
+[kleinere Pause]
+
+Marker_163
+Wir haben Gesichter und keine Angst mehr, das Gesicht zu verlieren.
+Wir haben Gesichter, und können unser Gesicht gar nicht verlieren.
+Sollte es doch möglich sein, dass wir das Gesicht verlieren, man weiß ja nie
+man weiß ja nie
+man weiß ja nie
+dann ist es so:
+wir haben, wie gesagt, keine Angst vor einem Gesichtsverlust
+überhaupt nicht.
+Das Risiko, Angst vor dem Gesichtsverlust zu haben, gehen wir überhaupt nicht ein.
+
+Marker_164
+Oder doch.
+<br>Genau.
+<br>YOder auch nicht.
+
+Marker_165
+Weißt du, was ich so lange schon sagen will:
